--- a/_includes/scss/gallery.scss
+++ b/_includes/scss/gallery.scss
@@ -1,20 +1,22 @@
 .gallery {
   padding: 0;
   margin: 0;
-  background-color: $blue;
+  background-color: $white;
   .gallery-item {
     transition: 400ms ease-in-out;
     &:hover {
-      color: $green;
-      opacity: .75;
+      opacity: .5;
       cursor: pointer;
     }
     &.is-expanded {
       &:hover {
         opacity: 1;
-        cursor: default;
+        cursor: pointer;
       }
     }
+  }
+  @media #{$tablet},#{$mobile} {
+    padding-top: 25px;
   }
 }
 .js-light-box {
@@ -23,9 +25,12 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: $blue;
+  background-color: $white;
   @include z-index-2;
   padding-left: 175px;
+  @media #{$tablet},#{$mobile} {
+    padding-left: 0;
+  }
 }
 .js-light-box-content {
   height: 100%;
@@ -33,6 +38,10 @@
   position: absolute;
   top: 0;
   left: 175px;
+  @media #{$tablet}, #{$mobile} {
+    width: 100%;
+    left: 0;
+  }
 }
 .js-light-box-img {
   position: absolute;
@@ -46,6 +55,10 @@
   transform:translate(-50%,-50%);
   &.portrait {
     background-size: contain;
+  }
+  @media #{$tablet}, #{$mobile} {
+    background-size: contain;
+    max-height: 462px;
   }
 }
 .js-light-box-txt {
@@ -116,6 +129,9 @@
       transition: 400ms ease-in-out;
     }
   }
+  @media #{$tablet},#{$mobile} {
+    top: 88px;
+  }
 }
 .js-more-info {
   color: $light-gray;
@@ -146,6 +162,12 @@
   cursor: pointer;
   &.is-visible {
     opacity: 1;
+  }
+  @media #{$tablet}, #{$mobile} {
+    position: fixed;
+    left: 0;
+    top: 91%;
+    text-align: center;
   }
 }
 .js-light-box-arrow {
