--- a/_includes/scss/nav.scss
+++ b/_includes/scss/nav.scss
@@ -1,51 +1,113 @@
 // Navigation
+.adam-haney-logo {
+  position: absolute;
+  left: 0;
+  top: 0;
+  padding: 16px;
+  padding-top: 25px;
+  display: none;
+  @include z-index-6;
+  @media #{$tablet}, #{$mobile} {
+    padding: 0;
+    display: block;
+  }
+}
 .navigation {
   width: 175px;
   position: fixed;
   top: 0;
   left: 0;
-  @include z-index-3;
+  @include z-index-9;
   overflow: visible;
-  background: $blue;
+  background: $white;
   height: 100%;
   // Title
   h1 {
+    // padding-top: 75px;
+    font-size: 24px;
     text-decoration: none;
     display: block;
     clear: both;
     cursor: pointer;
-    padding-left: 25px;
+    padding-left: 24px;
+    padding-top: 0;
     margin-bottom: $spacing-small;
+    color: $blue;
     a {
-      color: $white;
+      color: $blue;
+      @media #{$tablet}, #{$mobile} {
+        color: $white;
+      }
     }
+  }
+  @media #{$tablet}, #{$mobile} {
+    width: 100%;
+    height: 68px;
+    border-bottom: 2px solid $blue;
+    padding-bottom: 10px;
+    h1 {
+      font-size: 26px;
+      text-align: center;
+      padding: 0;
+      margin: 0;
+      position: absolute;
+      top: 50%;
+      left: 150px;
+      transform: translate(-50%,-50%);
+    }
+  }
+  @media #{$tablet}, #{$mobile} {
+    background-color: $blue;
   }
 }
 // Navigation
 .nav {
-    padding-left: 10px;
   ul {
     list-style-type: none;
     display: block;
-    padding-left: 0;
-    margin-top: 0;
+    padding-left: 10px;
+    padding-top: 0;
+    @media #{$tablet}, #{$mobile} {
+      padding: 0;
+    }
+    // margin-top: 0;
     li {
-      // padding: 2px;
+        &.is-visible {
+          right: 0;
+          -webkit-box-shadow: -4px 0 0 0 rgba($black, .1);
+          box-shadow: -4px 0 0 0 rgba($black, .1);
+        }
+      }
       a {
         color: $light-gray;
         display: block;
         transition: 300ms ease-in-out;
-        &:hover,
-        &.is-current {
-        box-shadow: inset 7.75em 0 0 0 $green;
-        transition: 400ms ease-in-out;
-        color: $white;
-        padding-left: 6px;
-        &:focus {
-          outline: none;
+
+        &.is-current,
+        &:hover {
+          box-shadow: inset 7.75em 0 0 0 $blue;
+          transition: 400ms ease-in-out;
+          color: $white;
+          padding-left: 6px;
+
+          &:focus {
+            outline: none;
           }
         }
       }
     }
+    @media #{$tablet}, #{$mobile} {
+      position: fixed;
+      width: 100px;
+      height: 150px;
+      top: 68px;
+      left: -200px;
+      background-color: $blue;
+      transition: 400ms ease-in-out;
+      &.is-triggered {
+        left: 0;
+        top: 68px;
+        margin-top: 0;
+      }
+    }
   }
-}
