--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <head>
       <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <title>{% if page.title %}{{page.title}} | {% endif %}Adam Haney</title>
+    <title class=adam-haney-title>{% if page.title %}{{page.title}} | {% endif %}Adam Haney</title>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
   <body>
