--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,13 +11,9 @@ body {
   height: 100vh;
   overflow: hidden;
   margin: 0;
-  background-color: $blue;
+  background-color: $white;
 }
-body {
-  text-align: left;
-  display: block;
-  padding-left: 150px;
-}
+
 {% include scss/zindex.scss %}
 {% include scss/breakpoints.scss %}
 {% include scss/transitions.scss %}
@@ -25,6 +21,20 @@ body {
 {% include scss/type.scss %}
 {% include scss/icons.scss %}
 {% include scss/kokkaku.scss %}
+
+body {
+  text-align: left;
+  display: block;
+  padding-left: 150px;
+  @media #{$mobile}, #{$tablet} {
+    padding: 50px 0;
+  }
+}
+html,
+body {
+  height: auto;
+  overflow: auto;
+}
 
 // Navigation
 {% include scss/nav.scss %}
@@ -37,7 +47,6 @@ body {
 
 // Top Level Navigation
 
-  // Photos
 img {
   max-width: 100%;
 }
@@ -61,6 +70,9 @@ img {
   overflow: auto;
   height: calc(100vh - 50px);
   position: relative;
+  @media #{$mobile}, #{$tablet} {
+    padding-top: 0;
+  }
 }
 // Adaptiva Title
   .project-title {
