--- a/_includes/scss/gallery.scss
+++ b/_includes/scss/gallery.scss
@@ -102,7 +102,7 @@
   cursor: pointer;
   span {
     position: absolute;
-    top: 5px;
+    top: 0;
     right: 0;
     display: block;
     background-color: $light-gray;
