--- a/_includes/html/gallery.html
+++ b/_includes/html/gallery.html
@@ -9,7 +9,7 @@
           <div class="js-light-box-img{% if image.portrait %} portrait{% endif %}" style="background-image: url('{{image.img}}')">
           </div>
           <div class="js-light-box-txt">
-            <div class="js-more-info">Show info</div>
+            <div class="js-more-info">Hide info</div>
             <span class="js-light-box-desc">{{image.text}}</span>
           </div>
         </div>
