--- a/_includes/scss/gallery.scss
+++ b/_includes/scss/gallery.scss
@@ -149,7 +149,7 @@
     cursor: pointer;
     color: $white;
     opacity: 50%;
-    border: 0;
+    border: $blue;
   }
   @media #{$tablet}, #{$mobile} {
     top: 80px;
