--- a/_includes/scss/gallery.scss
+++ b/_includes/scss/gallery.scss
@@ -154,9 +154,10 @@
   @media #{$tablet}, #{$mobile} {
     top: 70px;
     right: 10px;
-    width: 48px;
+    width: 50px;
     font-size: 8px;
     text-align: center;
+    padding: 2px;
   }
 }
 .js-light-box-arrows {
