--- a/_includes/scss/gallery.scss
+++ b/_includes/scss/gallery.scss
@@ -154,10 +154,11 @@
   @media #{$tablet}, #{$mobile} {
     top: 68px;
     left: 50%;
+    transform:translate(-50%,-50%);
     width: 50px;
     font-size: 8px;
     text-align: center;
-    padding: 2px;
+    padding: .1px;
   }
 }
 .js-light-box-arrows {
