--- a/_includes/scss/gallery.scss
+++ b/_includes/scss/gallery.scss
@@ -153,7 +153,7 @@
   }
   @media #{$tablet}, #{$mobile} {
     top: 68px;
-    right: 0
+    right: 0;
     width: 50px;
     font-size: 8px;
     text-align: center;
