--- a/_includes/scss/nav.scss
+++ b/_includes/scss/nav.scss
@@ -53,7 +53,7 @@
       margin: 0;
       position: absolute;
       top: 50%;
-      left: 200px;
+      left: 50%;
       transform: translate(-50%,-50%);
     }
   }
