--- a/_includes/scss/gallery.scss
+++ b/_includes/scss/gallery.scss
@@ -182,7 +182,8 @@
     top: 90%;
   }
   @media #{$tablet}, #{$mobile} {
-    left: 5px;
+    left: 0;
+    padding-left: 5px;
   }
 }
 .js-light-box-arrow {
