--- a/_includes/scss/gallery.scss
+++ b/_includes/scss/gallery.scss
@@ -47,7 +47,7 @@
   position: absolute;
   height: 100%;
   width: 100%;
-  background-size: cover;
+  background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
   top: 50%;
