--- a/_includes/scss/gallery.scss
+++ b/_includes/scss/gallery.scss
@@ -47,7 +47,7 @@
   position: absolute;
   height: 100%;
   width: 100%;
-  background-size: contain;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   top: 50%;
@@ -57,8 +57,8 @@
     background-size: contain;
   }
   @media #{$tablet}, #{$mobile} {
-    background-size: contain;
-    max-height: 462px;
+    background-size: cover;
+    // max-height: 462px;
   }
 }
 .js-light-box-txt {
