--- a/_includes/scss/gallery.scss
+++ b/_includes/scss/gallery.scss
@@ -175,7 +175,7 @@
   @media #{$tablet}, #{$mobile} {
     position: fixed;
     left: 0;
-    top: 90%;
+    bottom: 10px;
   }
   @media #{$tablet}, #{$mobile} {
     left: 0;
