--- a/_includes/scss/gallery.scss
+++ b/_includes/scss/gallery.scss
@@ -57,7 +57,7 @@
     background-size: contain;
   }
   @media #{$tablet}, #{$mobile} {
-    background-size: contain;
+    background-size: cover;
     max-height: 600px;
   }
 }
