--- a/_includes/scss/gallery.scss
+++ b/_includes/scss/gallery.scss
@@ -56,7 +56,7 @@
   &.portrait {
     background-size: contain;
     @media #{$tablet}, #{$mobile} {
-      background-size: contain;
+      background-size: cover;
       max-height: 600px;
     }
   }
