--- a/_includes/scss/gallery.scss
+++ b/_includes/scss/gallery.scss
@@ -57,7 +57,8 @@
     background-size: contain;
     @media #{$tablet}, #{$mobile} {
       background-size: cover;
-      max-height: 590px;
+      max-height: 500px;
+      max-width: 400px;
     }
   }
   @media #{$tablet}, #{$mobile} {
