--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -72,6 +72,7 @@ img {
   position: relative;
   @media #{$mobile}, #{$tablet} {
     padding-top: 0;
+    background-color: $blue;
   }
 }
 // Adaptiva Title
