--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -28,6 +28,7 @@ body {
   padding-left: 150px;
   @media #{$mobile}, #{$tablet} {
     padding: 50px 0;
+    background-color: $blue;
   }
 }
 html,
