--- a/_includes/scss/gallery.scss
+++ b/_includes/scss/gallery.scss
@@ -14,6 +14,9 @@
         cursor: pointer;
       }
     }
+    @media #{$tablet},#{$mobile} {
+      background-color: $blue;
+    }
   }
   @media #{$tablet},#{$mobile} {
     padding-top: 25px;
