--- a/_includes/scss/gallery.scss
+++ b/_includes/scss/gallery.scss
@@ -166,7 +166,7 @@
     width: 50px;
     font-size: 10px;
     text-align: center;
-    padding: .1px;
+    padding: 1px;
     background-color: transparent;
     color: $light-gray;
     position: absolute;
