--- a/_includes/scss/gallery.scss
+++ b/_includes/scss/gallery.scss
@@ -112,6 +112,7 @@
   }
 }
 .js-light-box-close {
+  transition: opacity 1000ms;
   position: absolute;
   @include z-index-5;
   display: block;
@@ -135,6 +136,9 @@
       transform: rotate(-45deg);
     }
     transition: 400ms ease-in-out;
+  }
+  &.is-hidden {
+    opacity: 0;
   }
   &:hover  {
     span {
