--- a/_includes/html/nav.html
+++ b/_includes/html/nav.html
@@ -1,4 +1,8 @@
 <section class="navigation">
+  <div class="js-nav-trigger">
+    <span></span>
+    <span></span>
+  </div>
   <div class="adam-haney-logo">
     {%include svg/adam-haney-logo.svg width="66px" height="66px"%}
   </div>
