--- a/_includes/scss/homepage.scss
+++ b/_includes/scss/homepage.scss
@@ -9,6 +9,7 @@
   overflow: hidden;
   @media #{$tablet}, #{$mobile} {
     max-width: 50%;
+    margin-bottom: 0;
   }
 }
   img {
@@ -32,6 +33,8 @@
   margin-bottom: $spacing-normal;
   @media #{$tablet}, #{$mobile} {
     padding-left: 0;
+    max-width: 200px;
+    margin-top: 0;
   }
 }
 // Contact Form
@@ -40,9 +43,7 @@
   display: block;
   overflow: visible;
   @media #{$mobile} {
-    margin-bottom: $spacing-normal;
-    width: 100%;
-    padding-left: 0;
+  margin: 0;
   }
 
   p {
