--- a/_includes/scss/nav.scss
+++ b/_includes/scss/nav.scss
@@ -93,7 +93,7 @@
           box-shadow: inset 7.75em 0 0 0 $blue;
           transition: 400ms ease-in-out;
           color: $white;
-          padding-left: 6px;
+          // padding-left: 6px;
 
           &:focus {
             outline: none;
@@ -107,6 +107,7 @@
       width: 100%;
       height: 0;
       top: 0;
+      font-size: 26px;
       background-color: $blue;
       transition: 200ms ease-in-out;
       @include vertical-center;
