--- a/_includes/scss/gallery.scss
+++ b/_includes/scss/gallery.scss
@@ -45,7 +45,7 @@
   @media #{$tablet}, #{$mobile} {
     width: 100%;
     left: 0;
-    background-color: $blue;
+    background-color: $white;
   }
 }
 .js-light-box-img {
@@ -105,6 +105,7 @@
   }
   &.is-displayed {
     background-color: rgba($blue,.90);
+    width: 100%;
     span {
       right: 0;
       opacity: 1;
