--- a/_includes/scss/nav.scss
+++ b/_includes/scss/nav.scss
@@ -70,7 +70,7 @@
     padding-left: 10px;
     padding-top: 0;
     @media #{$tablet}, #{$mobile} {
-      padding: 0;
+      padding: 5px;
       right: 20px;
       position: absolute;
       top: 100px;
@@ -93,7 +93,7 @@
           box-shadow: inset 7.75em 0 0 0 $blue;
           transition: 400ms ease-in-out;
           color: $white;
-          // padding-left: 6px;
+          padding-left: 6px;
 
           &:focus {
             outline: none;
@@ -113,6 +113,7 @@
       @include vertical-center;
       &.is-triggered {
         height: 100%;
+        text-align: right;
       }
     }
   }
@@ -146,7 +147,7 @@
     &.is-clicked {
       span {
         top: 11px;
-        background: $yellow;
+        background: $blue;
         &:first-child {
           -webkit-transform: rotate(-45deg);
                   transform: rotate(-45deg);
