Background color change

--- a/_includes/scss/color.scss
+++ b/_includes/scss/color.scss
@@ -1,10 +1,10 @@
 $light-grey: #C3CAD2;
 $dark-grey: #90989A;
 $white: #fff;
-$blue: #20344C;
+$blue: #232635;
 $dark-blue:      #073971;
 $darker-blue:    #052b55;
-$darkest-blue:   #041d39;
+$darkest-blue:   #232635;
 $bright-blue:    #41cdfc;
 $orange:         #ff902c;
 $yellow:         #f9ef3b;
