--- a/_includes/scss/gallery.scss
+++ b/_includes/scss/gallery.scss
@@ -29,7 +29,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: $white;
+  background-color: $blue;
   @include z-index-2;
   padding-left: 175px;
   @media #{$tablet},#{$mobile} {
@@ -45,7 +45,7 @@
   @media #{$tablet}, #{$mobile} {
     width: 100%;
     left: 0;
-    background-color: $white;
+    background-color: $darkest-blue;
   }
 }
 .js-light-box-img {
