--- a/_includes/scss/homepage.scss
+++ b/_includes/scss/homepage.scss
@@ -34,7 +34,7 @@
   @media #{$tablet}, #{$mobile} {
     padding-left: 0;
     max-width: 200px;
-    margin-top: 0;
+    margin-top: 20px;
   }
 }
 // Contact Form
