--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -62,6 +62,7 @@ img {
   position: relative;
   @media #{$mobile}, #{$tablet} {
     padding-top: 0;
+    padding-right: 0;
   }
 }
 // Adaptiva Title
