--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,7 +27,7 @@ body {
   display: block;
   padding-left: 150px;
   @media #{$mobile}, #{$tablet} {
-    padding: 50px 0;
+    padding: 0;
   }
 }
 html,
@@ -66,6 +66,7 @@ img {
   @media #{$mobile}, #{$tablet} {
     padding-top: 0;
     padding-right: 0;
+    height: calc(100% - 68px);
   }
 }
 // Adaptiva Title
