--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -64,7 +64,7 @@ img {
   height: calc(100vh - 50px);
   position: relative;
   @media #{$mobile}, #{$tablet} {
-    padding-top: 0;
+    padding-top: 68px;
     padding-right: 0;
     height: calc(100% - 68px);
   }
