--- a/_includes/html/gallery.html
+++ b/_includes/html/gallery.html
@@ -10,6 +10,7 @@
           </div>
           <div class="js-light-box-txt">
             <div class="js-more-info">Show info</div>
+            <h2>{{image.title}}</h2>
             <span class="js-light-box-desc">{{image.text}}</span>
           </div>
         </div>
