--- a/_includes/html/nav.html
+++ b/_includes/html/nav.html
@@ -47,10 +47,10 @@
   {%if page.gallery%}
   <div class="js-light-box-arrows">
     <div class="js-light-box-arrow prev">
-      {%include svg/triangle.svg color="white" width="24"%}
+      {%include svg/triangle.svg color="blue" width="24"%}
     </div>
     <div class="js-light-box-arrow next">
-      {%include svg/triangle.svg color="white" width="24"%}
+      {%include svg/triangle.svg color="blue" width="24"%}
     </div>
   </div>
   {%endif%}
