--- a/_includes/scss/gallery.scss
+++ b/_includes/scss/gallery.scss
@@ -94,13 +94,19 @@
   height: 100%;
   width: 250px;
   max-width: 450px;
-  padding: 25px;
+  padding: 110px 25px 25px;
   transition: 1000ms;
   @include z-index-3;
+  h2 {
+    right: -650px;
+    transition: 2000ms;
+    opacity: 0;
+    display: block;
+  }
   span {
     font-size: 1em;
     color: $white;
-    padding-top: 200px;
+    padding-top: $spacing-normal;
     position: relative;
     right: -450px;
     transition: 1000ms;
@@ -110,6 +116,12 @@
   &.is-displayed {
     background-color: rgba($blue,.90);
     width: 100%;
+    h2 {
+      display: block;
+      color: $light-gray;
+      right: 0;
+      opacity: 1;
+    }
     span {
       right: 0;
       opacity: 1;
@@ -176,11 +188,11 @@
   @include z-index-7;
   @media #{$all-desktop} {
     &:hover {
-      background-color: $blue;
+      background-color: $light-gray;
       cursor: pointer;
-      color: $white;
-      opacity: .5;
-      border: $light-gray;
+      color: $blue;
+      opacity: 1;
+      border: solid $light-gray;
     }
   }
   @media #{$tablet}, #{$mobile} {
@@ -214,6 +226,9 @@
     bottom: 10px;
     width: auto;
     padding: 0;
+    .triangle {
+      fill: $light-gray;
+    }
   }
 }
 .js-light-box-arrow {
