--- a/_includes/scss/gallery.scss
+++ b/_includes/scss/gallery.scss
@@ -94,19 +94,19 @@
   height: 100%;
   width: 250px;
   max-width: 450px;
-  padding: 110px 25px 25px;
+  padding: 160px 25px 25px;
   transition: 1000ms;
   @include z-index-3;
   h2 {
-    right: -650px;
-    transition: 2000ms;
+    right: -450px;
+    transition: 1500ms;
     opacity: 0;
     display: block;
   }
   span {
     font-size: 1em;
     color: $white;
-    padding-top: $spacing-normal;
+    padding-top: 0;
     position: relative;
     right: -450px;
     transition: 1000ms;
