--- a/_includes/scss/nav.scss
+++ b/_includes/scss/nav.scss
@@ -85,6 +85,9 @@
           -webkit-box-shadow: -4px 0 0 0 rgba($black, .1);
           box-shadow: -4px 0 0 0 rgba($black, .1);
         }
+        @media #{$tablet}, #{$mobile} {
+          padding-left: 0;
+        }
       }
       a {
         color: $light-gray;
@@ -100,6 +103,9 @@
 
           &:focus {
             outline: none;
+          }
+          @media #{$tablet}, #{$mobile} {
+            padding-left: 0;
           }
         }
       }
