--- a/_includes/scss/nav.scss
+++ b/_includes/scss/nav.scss
@@ -107,16 +107,23 @@
           @media #{$tablet}, #{$mobile} {
             padding-left: 0;
           }
+          @media #{$tablet}, #{$mobile} {
+          box-shadow: inset 7.75em 0 0 0 $white;
+          transition: 400ms ease-in-out;
+          color: $blue;
+          }
         }
       }
     }
     @media #{$tablet}, #{$mobile} {
+
       overflow: hidden;
       position: fixed;
       width: 100%;
       height: 0;
       top: 0;
-      font-size: 26px;
+      font-size: 36px;
+      font-weight: 300;
       background-color: $blue;
       transition: 500ms ease-in-out;
       opacity: 0;
