--- a/_includes/scss/nav.scss
+++ b/_includes/scss/nav.scss
@@ -69,7 +69,38 @@
     display: block;
     padding-left: 10px;
     padding-top: 0;
-    @media #{$tablet}, #{$mobile} {
+    // margin-top: 0;
+    li {
+      a {
+        color: $light-gray;
+        display: block;
+        transition: 300ms ease-in-out;
+        &:focus {
+          outline: none;
+        }
+        &.is-current,
+        &:hover {
+          box-shadow: inset 7.75em 0 0 0 $blue;
+          transition: 400ms ease-in-out;
+          color: $white;
+          padding-left: 6px;
+        }
+      }
+    }
+  }
+  @media #{$mobile}, #{$tablet} {
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
+    height: 0;
+    top: 0;
+    font-size: 36px;
+    font-weight: 300;
+    background-color: $blue;
+    transition: 500ms ease-in-out;
+    opacity: 0;
+    @include vertical-center;
+    ul {
       padding: 10px;
       left: 50%;
       position: absolute;
@@ -77,65 +108,29 @@
       text-align: center;
       transform: translate(-50%,-50%);
       background-color: rgba($blue,.90);
-    }
-    // margin-top: 0;
-    li {
-        &.is-visible {
-          right: 0;
-          -webkit-box-shadow: -4px 0 0 0 rgba($black, .1);
-          box-shadow: -4px 0 0 0 rgba($black, .1);
-        }
-        @media #{$tablet}, #{$mobile} {
-          padding-left: 0;
-        }
-      }
-      a {
-        color: $light-gray;
-        display: block;
-        transition: 300ms ease-in-out;
-
-        &.is-current,
-        &:hover {
-          box-shadow: inset 7.75em 0 0 0 $blue;
-          transition: 400ms ease-in-out;
-          color: $white;
-          padding-left: 6px;
-
-          &:focus {
-            outline: none;
-          }
-          @media #{$tablet}, #{$mobile} {
-            padding-left: 0;
-          }
-          @media #{$tablet}, #{$mobile} {
-          box-shadow: inset 7.75em 0 0 0 $white;
-          transition: 400ms ease-in-out;
-          color: $blue;
-          }
-        }
-      }
-    }
-    @media #{$tablet}, #{$mobile} {
-
-      overflow: hidden;
-      position: fixed;
       width: 100%;
-      height: 0;
-      top: 0;
-      font-size: 36px;
-      font-weight: 300;
-      background-color: $blue;
-      transition: 500ms ease-in-out;
-      opacity: 0;
-      @include vertical-center;
-      &.is-triggered {
-        height: 100%;
-        text-align: right;
-        opacity: 1;
-        @include z-index-5;
+      li {
+        padding-left: 0; // do we need it? idk
+        a {
+          padding: 5px;
+          &.is-current {
+            box-shadow: inset 7.75em 0 0 0 $white;
+            transition: 400ms ease-in-out;
+            color: $blue;
+            background-color: $white;
+          }
+        }
       }
+    }
+    &.is-triggered {
+      height: 100%;
+      text-align: right;
+      opacity: 1;
+      @include z-index-5;
     }
   }
+}
+
   .js-nav-trigger {
     display: none;
     height: 24px;
