Fixed mobile nav

--- a/_includes/html/nav.html
+++ b/_includes/html/nav.html
@@ -24,10 +24,10 @@
           <a href="{{"/design" | relative_url }}">Design</a>
           {% endif %}
         </li>
-        <li>{% if page.url == "/contact/" %}
-            <a class="is-current" href="{{"/index" | relative_url }}">Contact</a>
+        <li>{% if page.url == "/" %}
+            <a class="is-current" href="{{"/" | relative_url }}">Contact</a>
             {% else %}
-            <a href="{{"/index" | relative_url }}">Contact</a>
+            <a href="{{"/" | relative_url }}">Contact</a>
             {% endif %}
           </li>
       <!-- <h3>Projects</h3>
