Swipe on Gallery

--- a/_includes/scss/gallery.scss
+++ b/_includes/scss/gallery.scss
@@ -178,7 +178,7 @@
   display: inline-block;
   border: 2px solid $light-gray;
   padding: 5px;
-  position: absolute;
+  position: fixed;
   top: 20px;
   right: 20px;
   cursor: pointer;
