Hid Design Page

--- a/_includes/html/nav.html
+++ b/_includes/html/nav.html
@@ -18,12 +18,12 @@
         {% endif %}
       </li>
       <!-- <li><a href="#0">Motion</a></li> -->
-      <li>{% if page.url == "/design/" %}
+      <!-- <li>{% if page.url == "/design/" %}
           <a class="is-current" href="{{"/design" | relative_url }}">Design</a>
           {% else %}
           <a href="{{"/design" | relative_url }}">Design</a>
           {% endif %}
-        </li>
+        </li> -->
         <li>{% if page.url == "/" %}
             <a class="is-current" href="{{"/" | relative_url }}">Contact</a>
             {% else %}
