--- a/_includes/scss/kokkaku.scss
+++ b/_includes/scss/kokkaku.scss
@@ -589,7 +589,7 @@ nav.tertiary-nav {
   padding-bottom: 56.25%;
   iframe {
     position: absolute;
-    top: 200px;
+    top: 0;
     left: 0;
     width: 100%;
     height: 100%;
