--- a/_includes/html/video-gallery.html
+++ b/_includes/html/video-gallery.html
@@ -1,5 +1,5 @@
 <li class="j-col j-col-{{include.col}} gallery-item">
-  <img class="js-project-img lazy" title="{{video.title}}" src="{{video.thumb}}" alt="{{video.desc}}" />
+  <img title="{{video.title}}" src="{{video.thumb}}" alt="{{video.desc}}" />
   <div class="js-light-box video-light-box" style="display: none;">
     <div class="js-light-box-close">
       <span></span>
